Fix text overflow

--- a/css/newstyle.css
+++ b/css/newstyle.css
@@ -22,7 +22,7 @@ body {
 }
 
 .onevh {
-	min-height: 100vh;
+	height: 100vh;
 }
 
 .navcontainer {
@@ -202,7 +202,7 @@ body {
 	.tab {
 		padding: 25px;
 		height: 220px;
-		font-size: 1.2rem;
+		font-size: 1rem;
 	}
 
 	.project {
